# thrashguard

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
crates/thrash-core/: Cargo.toml
crates/thrash-core/src/: detector.rs  fingerprint.rs  intervention.rs  lib.rs  model.rs  policy.rs
crates/thrash-core/tests/: detector_tests.rs
crates/thrash-demo/: Cargo.toml
crates/thrash-demo/src/: main.rs  tui.rs
crates/thrash-proxy/: Cargo.toml
crates/thrash-proxy/src/: anthropic.rs  main.rs
docs/: architecture.md
fixtures/: healthy_progress.json  thrash_auth.json
