[workspace]
resolver = "2"
members = [
    "crates/thrash-core",
    "crates/thrash-demo",
    "crates/thrash-proxy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["ThrashGuard contributors"]
repository = "https://github.com/anshgoyalevil/thrashguard"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thrash-core = { path = "crates/thrash-core" }

# Optimise release builds for the hot-path proxy.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
