[package]
name = "thrash-proxy"
description = "Transparent Anthropic Messages API proxy that injects ThrashGuard interventions when an agent loops."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "thrash-proxy"
path = "src/main.rs"

[dependencies]
thrash-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
